---
title: "Backend — Layer 1: DB Models"
---
classDiagram
    direction LR

    class User {
        +UUID id
        +str email
        +str nickname
        +str password_hash
        +str role
        +bool is_email_confirmed
        +bool is_active
        +datetime created_at
    }

    class RefreshToken {
        +UUID id
        +UUID user_id
        +str token_hash
        +datetime expires_at
        +datetime created_at
    }

    class VerificationToken {
        +UUID id
        +UUID user_id
        +str type
        +str token_hash
        +datetime expires_at
    }

    class Note {
        +UUID id
        +UUID user_id
        +str title
        +str content
        +int version
        +datetime created_at
        +datetime updated_at
        +datetime deleted_at
    }

    class Tag {
        +UUID id
        +UUID user_id
        +str name
        +datetime created_at
    }

    class NoteTag {
        +UUID note_id
        +UUID tag_id
    }

    class NoteChunk {
        +UUID id
        +UUID note_id
        +UUID user_id
        +int chunk_index
        +Vector embedding
        +datetime created_at
    }

    class EmbeddingTask {
        +UUID id
        +UUID note_id
        +UUID user_id
        +str status
        +int attempts
        +str error
        +datetime updated_at
    }

    class ChatSession {
        +UUID id
        +UUID user_id
        +str title
        +datetime created_at
        +datetime last_message_at
    }

    class ChatMessage {
        +UUID id
        +UUID session_id
        +str role
        +str content
        +list attached_note_ids
        +int token_estimate
        +datetime created_at
    }

    User "1" --> "*" RefreshToken : owns
    User "1" --> "*" VerificationToken : owns
    User "1" --> "*" Note : owns
    User "1" --> "*" Tag : owns
    User "1" --> "*" ChatSession : owns

    Note "*" -- "*" Tag : via NoteTag
    NoteTag --> Note
    NoteTag --> Tag

    Note "1" --> "*" NoteChunk : chunked into
    Note "1" --> "0..1" EmbeddingTask : queued as

    ChatSession "1" --> "*" ChatMessage : contains
